--- a/demo-api/src/main/resources/jdbc.properties
+++ b/demo-api/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/quartz?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-jdbc.username=root
-jdbc.password=
+jdbc.url=jdbc:mysql://10.1.6.134:3306/t1?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+jdbc.username=twodfire
+jdbc.password=123456
