--- a/demo-api/src/main/resources/quartz_local.properties
+++ b/demo-api/src/main/resources/quartz_local.properties
@@ -8,11 +8,11 @@ org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = tru
 
 org.quartz.jobStore.misfireThreshold = 60000
 #org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
-org.quartz.jobStore.tablePrefix = QRTZ_
-org.quartz.jobStore.maxMisfiresToHandleAtATime=10
-org.quartz.jobStore.isClustered=true
-org.quartz.jobStore.clusterCheckinInterval = 20000
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+#org.quartz.jobStore.tablePrefix = QRTZ_
+#org.quartz.jobStore.maxMisfiresToHandleAtATime=10
+#org.quartz.jobStore.isClustered=true
+#org.quartz.jobStore.clusterCheckinInterval = 20000
 
 
 org.quartz.scheduler.instanceName=MyScheduler
